--- a/my-portfolio/index.html
+++ b/my-portfolio/index.html
@@ -156,7 +156,7 @@
                 </a>
                 <h3>Cannon Game</h3>
                 <p>A physics-powered ASCII artillery game built in C++. Calculate angles and power to hit your targets!</p>
-                <a href="Cannon.zip" download>Download & Play</a>
+                <a href="cannon.zip" download>Download & Play</a>
             </div>
 
             <!-- Game 2: STICK Coming Soon -->
@@ -177,3 +177,4 @@
 
 </body>
 </html>
+
