--- a/my-portfolio/index.html
+++ b/my-portfolio/index.html
@@ -227,6 +227,72 @@
             box-sizing: border-box;
         }
 
+        /* CUSTOM INPUT INTERFACE */
+        .game-input-area {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 15px;
+            background: #2a2a2a;
+            border-radius: 8px;
+            border: 2px solid #6ab4ff;
+        }
+
+        .game-input-area h3 {
+            margin-top: 0;
+            color: #6ab4ff;
+        }
+
+        .input-group {
+            margin: 15px 0;
+        }
+
+        .input-group label {
+            display: block;
+            margin-bottom: 5px;
+            color: #f5f5f5;
+        }
+
+        .input-group input {
+            width: 100%;
+            padding: 10px;
+            background: #1e1e1e;
+            border: 1px solid #555;
+            border-radius: 4px;
+            color: #f5f5f5;
+            font-size: 16px;
+            box-sizing: border-box;
+        }
+
+        .input-group input:focus {
+            outline: none;
+            border-color: #6ab4ff;
+        }
+
+        .submit-btn {
+            background: #6ab4ff;
+            color: white;
+            border: none;
+            padding: 12px 30px;
+            border-radius: 6px;
+            cursor: pointer;
+            font-size: 16px;
+            width: 100%;
+            margin-top: 10px;
+        }
+
+        .submit-btn:hover {
+            background: #5a9de5;
+        }
+
+        .submit-btn:disabled {
+            background: #555;
+            cursor: not-allowed;
+        }
+
+        #gameInputArea {
+            display: none;
+        }
+
         footer {
             background: var(--header-bg);
             color: var(--header-text);
@@ -476,5 +542,3 @@
 
 </body>
 </html>
-
-
