--- a/my-portfolio/cannon.html
+++ b/my-portfolio/cannon.html
@@ -318,7 +318,7 @@
                     
                     if (Math.abs(landing - targetDistance) <= tolerance) {
                         print('');
-                        print('🎯 YOU HIT THE TARGET! 🎯');
+                        print(' YOU HIT THE TARGET! ');
                         print('');
                         print('Game over — thanks for playing!');
                         print('');
@@ -349,3 +349,4 @@
     </script>
 </body>
 </html>
+
